fix band list styling and song button spacing

--- a/client/stylesheets/session_page.css
+++ b/client/stylesheets/session_page.css
@@ -68,3 +68,10 @@
   width:100%;
 
 }
+
+.py1 input{
+
+  padding-bottom:15px;
+}
+
+
